# crawler_domain_education_indonesia

./: .env.example  .gitignore  ADJUST.MD  README_CRAWLER.md  config.py  keywords.txt  main.py  pyproject.toml  requirements.txt  sites.yaml  urls.txt
core/: bot.py  crawler.py
data/raw/: dataset_raw.jsonl  dataset_raw_processed_1.jsonl  dedupe.sqlite3
src/cleaner/: clean_crawler.py
tools/: selector_test.py
utils/: discovery.py  processor.py  site_config.py  sitemap.py
