[project]
name = "aitf-sr-02-crawler"
version = "0.1.0"
description = "Tim 2 Sekolah Rakyat (AITF 2026) - Educational Crawler for CPT Dataset. Mengumpulkan konten kurikulum nasional Indonesia untuk Continued Pre-training."
requires-python = ">=3.11"
dependencies = [
    "crawl4ai>=0.8.0",
    "python-telegram-bot>=21.0",
    "pydantic-settings>=2.0",
    "aiohttp>=3.9",
    "psutil>=5.9",
    "huggingface-hub>=1.6.0",
    "datasets>=4.6.1",
]

[project.optional-dependencies]
linux = ["uvloop>=0.19"]

[dependency-groups]
dev = []
